{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "d0ed0e4b-e3fc-4777-be6c-a879d2458f28",
            "actions": [
                {
                    "name": "RStickClick",
                    "type": "Button",
                    "id": "025f3d75-7181-4e97-8510-0af1bda38b9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LStickClick",
                    "type": "Button",
                    "id": "2ef08f4d-84a3-4701-aaee-4860f5ac6860",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AButtonR",
                    "type": "Button",
                    "id": "4bb6fc4a-44f0-4b42-8410-ef4fabb68b3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BButtonR",
                    "type": "Button",
                    "id": "ff3c5c60-a561-45fe-9f92-754c2cefc63b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XButtonR",
                    "type": "Button",
                    "id": "2a1c9010-b37b-4068-8378-f3a2fa93dfe0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YButtonR",
                    "type": "Button",
                    "id": "04c110df-0174-4c58-bbc3-0456ca4b3ba9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AButtonL",
                    "type": "Button",
                    "id": "744e2e54-d58e-430f-8d9b-e29712785f37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BButtonL",
                    "type": "Button",
                    "id": "048e7bae-9ca4-4b75-a0e2-dc730ac1b8c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XButtonL",
                    "type": "Button",
                    "id": "b6c3aa3a-8cac-4a0a-8854-b2ed9e799afd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YButtonL",
                    "type": "Button",
                    "id": "927642cf-684c-4066-ab19-aff4d221510f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartButton",
                    "type": "Button",
                    "id": "ed8ee23c-64ee-418f-875a-c2c2808b05e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectButton",
                    "type": "Button",
                    "id": "b4a39c0b-8c6a-4918-bb40-087c5bfffa3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RStickAxis",
                    "type": "Value",
                    "id": "bab96483-a05b-4204-8fc7-8b698bb121e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LStickAxis",
                    "type": "Value",
                    "id": "559587a4-0a8f-44c9-b6bb-2f12241e2630",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RTrigger",
                    "type": "Button",
                    "id": "bc4d555a-b58e-4841-93ef-a83602187701",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LTrigger",
                    "type": "Button",
                    "id": "caec6fde-df9f-4e63-a79e-76240ff20057",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RBumper",
                    "type": "Button",
                    "id": "1be29eb4-b1c3-4c2d-8cd4-9621f9d9395e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LBumper",
                    "type": "Button",
                    "id": "248b973a-56d0-4527-a1f8-bd9ed142bbee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "add87313-966f-42a3-9238-d90a87c1036f",
                    "path": "<OculusTouchController>{RightHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RStickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb24a6d6-7dca-4fd7-b84d-142cff2dbe45",
                    "path": "<OculusTouchController>{LeftHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LStickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f690e093-0ecb-4de4-a1cf-4a9d27deb3de",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AButtonR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ece8ab3-0af5-475a-b415-31d6e1b60be0",
                    "path": "<OculusTouchController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BButtonR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5a331a9-9cd0-41b0-bb53-72918b4e297d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XButtonR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ac03177-8fa4-42dc-a66f-965f6440e8d3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YButtonR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "948fc770-1c27-425c-87d1-9e4ccbe2c19f",
                    "path": "<OculusTouchController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AButtonL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4920cdfd-fdf7-412c-aadd-08e080b66d6a",
                    "path": "<OculusTouchController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BButtonL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d0ebe6c-7d25-4e40-920f-8ca16d8a95e6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XButtonL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fe1db18-5e6e-47d6-989a-9616f4672524",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YButtonL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "188c40bf-160a-4bb2-8443-180d59c997ad",
                    "path": "<OculusTouchController>{LeftHand}/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86ce9a4a-8f7f-423f-ac78-c3d6a1610e97",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd0f0fbe-8d85-428a-a13b-5fbd4c71441b",
                    "path": "<OculusTouchController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RStickAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e55532ca-9bf8-488b-a41f-1efd8197161d",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LStickAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66c83461-abdc-4e3f-97dc-8e12ee41a5f7",
                    "path": "<OculusTouchController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57390a91-bd88-4c2f-9114-0c664042a04d",
                    "path": "<OculusTouchController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acb19827-fa67-4eac-8f0e-f77420aa93d8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a90fd1e-0275-4273-b476-220c9e21441e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}